--- a/image-repair.html
+++ b/image-repair.html
@@ -194,71 +194,55 @@
             overflow: hidden;
         }
 
-        /* Upload Section */
-        .upload-section {
-            padding: 80px 40px;
+        /* Section Title */
+        .section-title {
             text-align: center;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
+            margin: 24px 0;
         }
 
-        .upload-section h1 {
-            font-size: 2.5rem;
-            margin-bottom: 20px;
-            font-weight: 700;
+        .section-title h2 {
+            font-size: 1.8rem;
+            margin: 0 0 .5rem;
+            color: var(--dark);
         }
 
-        .upload-section p {
-            font-size: 1.1rem;
-            margin-bottom: 30px;
-            opacity: 0.9;
+        .section-title p {
+            color: var(--gray);
         }
 
+        /* Upload Section */
         .upload-area {
-            border: 3px dashed rgba(255,255,255,0.3);
-            border-radius: 15px;
-            padding: 60px 40px;
+            border: 2px dashed var(--gray);
+            border-radius: var(--border-radius);
+            padding: 2rem 1.5rem;
+            text-align: center;
+            margin-bottom: 1.2rem;
+            transition: var(--transition);
             cursor: pointer;
-            transition: all 0.3s;
-            background: rgba(255,255,255,0.05);
-            backdrop-filter: blur(10px);
         }
 
         .upload-area:hover {
-            border-color: white;
-            background: rgba(255,255,255,0.1);
-            transform: translateY(-2px);
+            border-color: var(--accent);
+            background: rgba(16, 185, 129, .05);
         }
 
-        .upload-icon {
-            font-size: 64px;
-            margin-bottom: 20px;
-            opacity: 0.9;
-        }
-
-        .upload-text h3 {
-            font-size: 1.5rem;
-            margin-bottom: 10px;
-        }
-
-        .upload-features {
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-            margin-top: 30px;
-            flex-wrap: wrap;
-        }
-
-        .feature-item {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            font-size: 0.95rem;
-        }
-
-        .feature-item i {
+        .upload-area i {
+            font-size: 2.5rem;
             color: var(--accent);
+            margin-bottom: .8rem;
+            display: block;
+        }
+
+        .upload-area h3 {
             font-size: 1.2rem;
+            color: var(--dark);
+            margin: 0.5rem 0;
+        }
+
+        .upload-area p {
+            color: var(--gray);
+            font-size: 0.9rem;
+            margin: 0;
         }
 
         /* Editor Interface */
@@ -736,40 +720,16 @@
 
     <div class="container">
         <!-- Upload Section -->
+        <div class="section-title">
+            <h2>Professional Image Editor</h2>
+            <p>Complete photo editing suite with 500+ tools for office, personal, and field work</p>
+        </div>
+        
         <div class="editor-main" id="uploadSection">
-            <div class="upload-section">
-                <h1>Professional Image Editor</h1>
-                <p>Complete photo editing suite with 500+ tools for office, personal, and field work</p>
-
-                <div class="upload-area" onclick="document.getElementById('fileInput').click()">
-                    <div class="upload-icon">
-                        <i class="fas fa-cloud-upload-alt"></i>
-                    </div>
-                    <div class="upload-text">
-                        <h3>Upload Your Image</h3>
-                        <p>Drag & drop or click to browse<br>Supports JPG, PNG, WEBP, BMP, TIFF (Max 15MB)</p>
-                    </div>
-                </div>
-
-                <div class="upload-features">
-                    <div class="feature-item">
-                        <i class="fas fa-tools"></i>
-                        <span>500+ Professional Tools</span>
-                    </div>
-                    <div class="feature-item">
-                        <i class="fas fa-mouse-pointer"></i>
-                        <span>Region-Specific Editing</span>
-                    </div>
-                    <div class="feature-item">
-                        <i class="fas fa-layer-group"></i>
-                        <span>Layers & Masks</span>
-                    </div>
-                    <div class="feature-item">
-                        <i class="fas fa-magic"></i>
-                        <span>AI-Powered Effects</span>
-                    </div>
-                </div>
-
+            <div class="upload-area" onclick="document.getElementById('fileInput').click()">
+                <i class="fas fa-cloud-upload-alt"></i>
+                <h3>Drop your image here or click to browse</h3>
+                <p>Supports JPG, PNG, WEBP, BMP, TIFF (Max: 15MB)</p>
                 <input type="file" id="fileInput" accept="image/*" style="display: none;" onchange="handleFileUpload(event)">
             </div>
         </div>
@@ -1139,59 +1099,8 @@
     </div>
 
     <!-- Footer -->
-    <footer style="background-color: #2c3e50; color: white; padding: 40px 0; margin-top: 40px;">
-        <div class="container">
-            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 30px; margin-bottom: 30px;">
-                <div>
-                    <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 20px;">
-                        <i class="fas fa-file-pdf" style="font-size: 24px; color: var(--primary);"></i>
-                        <span style="font-size: 20px; font-weight: 700;">easyjpgtopdf</span>
-                    </div>
-                    <p style="color: #bdc3c7; line-height: 1.6;">
-                        Free online PDF and image tools for everyone. Convert, edit, compress, and manipulate your documents with our professional suite of tools.
-                    </p>
-                </div>
-
-                <div>
-                    <h4 style="color: white; margin-bottom: 15px; font-size: 16px;">PDF Tools</h4>
-                    <ul style="list-style: none; padding: 0;">
-                        <li style="margin-bottom: 8px;"><a href="pdf-to-jpg.html" style="color: #bdc3c7; text-decoration: none;">PDF to JPG</a></li>
-                        <li style="margin-bottom: 8px;"><a href="pdf-to-word.html" style="color: #bdc3c7; text-decoration: none;">PDF to Word</a></li>
-                        <li style="margin-bottom: 8px;"><a href="pdf-to-excel.html" style="color: #bdc3c7; text-decoration: none;">PDF to Excel</a></li>
-                        <li style="margin-bottom: 8px;"><a href="pdf-to-ppt.html" style="color: #bdc3c7; text-decoration: none;">PDF to PPT</a></li>
-                        <li style="margin-bottom: 8px;"><a href="merge-pdf.html" style="color: #bdc3c7; text-decoration: none;">Merge PDF</a></li>
-                        <li style="margin-bottom: 8px;"><a href="split-pdf.html" style="color: #bdc3c7; text-decoration: none;">Split PDF</a></li>
-                        <li style="margin-bottom: 8px;"><a href="compress-pdf.html" style="color: #bdc3c7; text-decoration: none;">Compress PDF</a></li>
-                        <li style="margin-bottom: 8px;"><a href="unlock-pdf.html" style="color: #bdc3c7; text-decoration: none;">Unlock PDF</a></li>
-                    </ul>
-                </div>
-
-                <div>
-                    <h4 style="color: white; margin-bottom: 15px; font-size: 16px;">Image Tools</h4>
-                    <ul style="list-style: none; padding: 0;">
-                        <li style="margin-bottom: 8px;"><a href="image-compressor.html" style="color: #bdc3c7; text-decoration: none;">Compress Image</a></li>
-                        <li style="margin-bottom: 8px;"><a href="image-resizer.html" style="color: #bdc3c7; text-decoration: none;">Resize Image</a></li>
-                        <li style="margin-bottom: 8px;"><a href="image-editor.html" style="color: #bdc3c7; text-decoration: none;">Edit Image</a></li>
-                        <li style="margin-bottom: 8px;"><a href="image-watermark.html" style="color: #bdc3c7; text-decoration: none;">Watermark Image</a></li>
-                        <li style="margin-bottom: 8px;"><a href="background-remover.html" style="color: #bdc3c7; text-decoration: none;">Remove Background</a></li>
-                        <li style="margin-bottom: 8px;"><a href="image-repair.html" style="color: #bdc3c7; text-decoration: none;">AI Image Repair</a></li>
-                        <li style="margin-bottom: 8px;"><a href="ocr-image.html" style="color: #bdc3c7; text-decoration: none;">OCR Image</a></li>
-                        <li style="margin-bottom: 8px;"><a href="image-converter.html" style="color: #bdc3c7; text-decoration: none;">Convert Image</a></li>
-                    </ul>
-                </div>
-
-                <div>
-                    <h4 style="color: white; margin-bottom: 15px; font-size: 16px;">Design Tools</h4>
-                    <ul style="list-style: none; padding: 0;">
-                        <li style="margin-bottom: 8px;"><a href="marriage-card.html" style="color: #bdc3c7; text-decoration: none;">Marriage Card</a></li>
-                        <li style="margin-bottom: 8px;"><a href="payment-receipt.html" style="color: #bdc3c7; text-decoration: none;">Payment Receipt</a></li>
-                        <li style="margin-bottom: 8px;"><a href="biodata-maker.html" style="color: #bdc3c7; text-decoration: none;">Biodata Maker</a></li>
-                        <li style="margin-bottom: 8px;"><a href="resume-maker.html" style="color: #bdc3c7; text-decoration: none;">Resume Maker</a></li>
-                        <li style="margin-bottom: 8px;"><a href="kyc-support.html" style="color: #bdc3c7; text-decoration: none;">KYC Support</a></li>
-                    </ul>
-                </div>
-            </div>
-
+    <footer>
+        <div class="container footer-inner">
             <div class="footer-company-links">
                 <span>Company</span>
                 <a href="index.html#about">About Us</a>
