--- a/image-repair.html
+++ b/image-repair.html
@@ -661,13 +661,14 @@
         .editor-top-bar {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
-            padding: 12px 20px;
+            padding: 8px 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
             box-shadow: 0 2px 8px rgba(0,0,0,0.2);
             flex-wrap: wrap;
             gap: 10px;
+            position: relative;
         }
 
         .editor-top-bar h2 {
@@ -678,40 +679,93 @@
             gap: 8px;
         }
 
+        .toolbar-menu-btn {
+            background: rgba(255,255,255,0.2);
+            color: white;
+            border: 1px solid rgba(255,255,255,0.3);
+            padding: 8px 16px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 0.9rem;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            transition: all 0.3s;
+        }
+
+        .toolbar-menu-btn:hover {
+            background: rgba(255,255,255,0.3);
+        }
+
+        .toolbar-menu-btn.active {
+            background: rgba(255,255,255,0.4);
+        }
+
         .editor-actions {
             display: flex;
             gap: 8px;
             flex-wrap: wrap;
         }
 
+        .editor-actions-dropdown {
+            display: none;
+            position: absolute;
+            top: 100%;
+            right: 20px;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+            padding: 8px;
+            z-index: 1000;
+            min-width: 200px;
+            margin-top: 5px;
+        }
+
+        .editor-actions-dropdown.show {
+            display: flex;
+            flex-direction: column;
+            gap: 6px;
+        }
+
         .top-btn {
-            background: rgba(255,255,255,0.2);
-            color: white;
-            border: 1px solid rgba(255,255,255,0.3);
-            padding: 8px 14px;
+            background: #f8f9fa;
+            color: var(--dark);
+            border: 1px solid #e0e0e0;
+            padding: 10px 14px;
             border-radius: 5px;
             cursor: pointer;
-            font-size: clamp(0.8rem, 2vw, 0.9rem);
+            font-size: 0.9rem;
             transition: all 0.3s;
             white-space: nowrap;
             display: flex;
             align-items: center;
-            gap: 5px;
+            gap: 8px;
+            width: 100%;
+            justify-content: flex-start;
         }
 
         .top-btn:hover {
-            background: rgba(255,255,255,0.3);
-            transform: translateY(-1px);
+            background: var(--primary);
+            color: white;
+            transform: translateX(3px);
         }
 
         .top-btn.success {
+            color: var(--success);
+        }
+
+        .top-btn.success:hover {
             background: var(--success);
-            border-color: var(--success);
+            color: white;
         }
 
         .top-btn.danger {
+            color: var(--danger);
+        }
+
+        .top-btn.danger:hover {
             background: var(--danger);
-            border-color: var(--danger);
+            color: white;
         }
 
         .editor-main-panels {
@@ -1517,14 +1571,20 @@
                 <i class="fas fa-image"></i>
                 Professional Image Editor
             </h2>
-            <div class="editor-actions">
-                <button class="top-btn" onclick="undoAction()">
+            <button class="toolbar-menu-btn" id="toolbarMenuBtn" onclick="toggleToolbarMenu()">
+                <i class="fas fa-bars"></i> Menu
+                <i class="fas fa-chevron-down"></i>
+            </button>
+            
+            <!-- Dropdown Menu -->
+            <div class="editor-actions-dropdown" id="toolbarDropdown">
+                <button class="top-btn" onclick="undoAction(); closeToolbarMenu();">
                     <i class="fas fa-undo"></i> Undo
                 </button>
-                <button class="top-btn" onclick="redoAction()">
+                <button class="top-btn" onclick="redoAction(); closeToolbarMenu();">
                     <i class="fas fa-redo"></i> Redo
                 </button>
-                <button class="top-btn success" onclick="downloadEditedImage()">
+                <button class="top-btn success" onclick="downloadEditedImage(); closeToolbarMenu();">
                     <i class="fas fa-download"></i> Export
                 </button>
                 <button class="top-btn danger" onclick="closeFullEditor()">
@@ -2505,6 +2565,33 @@
                 document.getElementById('propsToggle').classList.remove('active');
             }
         }
+
+        // Toggle Top Toolbar Menu
+        function toggleToolbarMenu() {
+            const dropdown = document.getElementById('toolbarDropdown');
+            const menuBtn = document.getElementById('toolbarMenuBtn');
+            dropdown.classList.toggle('show');
+            menuBtn.classList.toggle('active');
+        }
+
+        function closeToolbarMenu() {
+            const dropdown = document.getElementById('toolbarDropdown');
+            const menuBtn = document.getElementById('toolbarMenuBtn');
+            dropdown.classList.remove('show');
+            menuBtn.classList.remove('active');
+        }
+
+        // Close dropdown when clicking outside
+        document.addEventListener('click', function(event) {
+            const dropdown = document.getElementById('toolbarDropdown');
+            const menuBtn = document.getElementById('toolbarMenuBtn');
+            if (dropdown && menuBtn) {
+                if (!menuBtn.contains(event.target) && !dropdown.contains(event.target)) {
+                    dropdown.classList.remove('show');
+                    menuBtn.classList.remove('active');
+                }
+            }
+        });
 
         // Toggle Mobile Panels (Collapsible)
         function toggleMobilePanel(panelType) {
