--- a/image-repair.html
+++ b/image-repair.html
@@ -672,11 +672,98 @@
         }
 
         .editor-top-bar h2 {
-            font-size: clamp(1rem, 3vw, 1.3rem);
+            font-size: clamp(0.9rem, 2.5vw, 1.1rem);
             margin: 0;
             display: flex;
             align-items: center;
             gap: 8px;
+        }
+
+        /* Professional Toolbar Categories */
+        .professional-toolbar {
+            display: flex;
+            gap: 0;
+            background: #f8f9fa;
+            border-bottom: 2px solid #e0e0e0;
+            padding: 0;
+            overflow-x: auto;
+        }
+
+        .toolbar-category {
+            position: relative;
+            flex-shrink: 0;
+        }
+
+        .category-button {
+            background: #f8f9fa;
+            color: #495057;
+            border: none;
+            border-right: 1px solid #dee2e6;
+            padding: 12px 20px;
+            cursor: pointer;
+            font-size: 0.85rem;
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            transition: all 0.3s;
+            white-space: nowrap;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+        }
+
+        .category-button:hover {
+            background: white;
+            color: var(--primary);
+        }
+
+        .category-button.active {
+            background: white;
+            color: var(--primary);
+            border-bottom: 3px solid var(--primary);
+        }
+
+        .category-dropdown {
+            display: none;
+            position: absolute;
+            top: 100%;
+            left: 0;
+            background: white;
+            min-width: 250px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+            border-radius: 0 0 8px 8px;
+            z-index: 1000;
+            padding: 8px 0;
+        }
+
+        .toolbar-category:hover .category-dropdown {
+            display: block;
+        }
+
+        .tool-item-dropdown {
+            padding: 10px 20px;
+            color: #495057;
+            cursor: pointer;
+            transition: all 0.2s;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            font-size: 0.9rem;
+            border: none;
+            background: transparent;
+            width: 100%;
+            text-align: left;
+        }
+
+        .tool-item-dropdown:hover {
+            background: var(--primary);
+            color: white;
+            padding-left: 25px;
+        }
+
+        .tool-item-dropdown i {
+            width: 18px;
+            text-align: center;
         }
 
         .toolbar-menu-btn {
@@ -1590,6 +1677,132 @@
                 <button class="top-btn danger" onclick="closeFullEditor()">
                     <i class="fas fa-times"></i> Close
                 </button>
+            </div>
+        </div>
+
+        <!-- Professional Toolbar with Categories -->
+        <div class="professional-toolbar">
+            <!-- FILE & BASIC -->
+            <div class="toolbar-category">
+                <button class="category-button">
+                    <i class="fas fa-file"></i> FILE & BASIC
+                </button>
+                <div class="category-dropdown">
+                    <button class="tool-item-dropdown" onclick="undoAction()">
+                        <i class="fas fa-undo"></i> Undo
+                    </button>
+                    <button class="tool-item-dropdown" onclick="redoAction()">
+                        <i class="fas fa-redo"></i> Redo
+                    </button>
+                    <button class="tool-item-dropdown" onclick="resetImage()">
+                        <i class="fas fa-sync"></i> Reset
+                    </button>
+                    <button class="tool-item-dropdown" onclick="downloadEditedImage()">
+                        <i class="fas fa-download"></i> Save/Export
+                    </button>
+                </div>
+            </div>
+
+            <!-- SELECTION -->
+            <div class="toolbar-category">
+                <button class="category-button">
+                    <i class="fas fa-mouse-pointer"></i> SELECTION
+                </button>
+                <div class="category-dropdown">
+                    <button class="tool-item-dropdown" onclick="selectAll()">
+                        <i class="fas fa-object-group"></i> Select All
+                    </button>
+                    <button class="tool-item-dropdown" onclick="deselectAll()">
+                        <i class="fas fa-times-circle"></i> Deselect All
+                    </button>
+                    <button class="tool-item-dropdown" onclick="invertSelection()">
+                        <i class="fas fa-exchange-alt"></i> Invert Selection
+                    </button>
+                </div>
+            </div>
+
+            <!-- CROP & TRANSFORM -->
+            <div class="toolbar-category">
+                <button class="category-button">
+                    <i class="fas fa-crop"></i> CROP & TRANSFORM
+                </button>
+                <div class="category-dropdown">
+                    <button class="tool-item-dropdown" onclick="rotateRight()">
+                        <i class="fas fa-redo"></i> Rotate Right 90°
+                    </button>
+                    <button class="tool-item-dropdown" onclick="rotateLeft()">
+                        <i class="fas fa-undo"></i> Rotate Left 90°
+                    </button>
+                    <button class="tool-item-dropdown" onclick="flipH()">
+                        <i class="fas fa-arrows-alt-h"></i> Flip Horizontal
+                    </button>
+                    <button class="tool-item-dropdown" onclick="flipV()">
+                        <i class="fas fa-arrows-alt-v"></i> Flip Vertical
+                    </button>
+                    <button class="tool-item-dropdown" onclick="resizeImage()">
+                        <i class="fas fa-expand-arrows-alt"></i> Resize Image
+                    </button>
+                </div>
+            </div>
+
+            <!-- BRUSH & PAINT -->
+            <div class="toolbar-category">
+                <button class="category-button">
+                    <i class="fas fa-paint-brush"></i> BRUSH & PAINT
+                </button>
+                <div class="category-dropdown">
+                    <button class="tool-item-dropdown" onclick="quickFilter('blur')">
+                        <i class="fas fa-circle"></i> Blur Tool
+                    </button>
+                    <button class="tool-item-dropdown" onclick="enableDrawing()">
+                        <i class="fas fa-pen"></i> Pencil Tool
+                    </button>
+                    <button class="tool-item-dropdown" onclick="enableBrush()">
+                        <i class="fas fa-paint-brush"></i> Paint Brush
+                    </button>
+                    <button class="tool-item-dropdown" onclick="enableEraser()">
+                        <i class="fas fa-eraser"></i> Eraser
+                    </button>
+                </div>
+            </div>
+
+            <!-- LAYERS & MASKS -->
+            <div class="toolbar-category">
+                <button class="category-button">
+                    <i class="fas fa-layer-group"></i> LAYERS & MASKS
+                </button>
+                <div class="category-dropdown">
+                    <button class="tool-item-dropdown" onclick="adjustOpacity()">
+                        <i class="fas fa-adjust"></i> Adjust Opacity
+                    </button>
+                    <button class="tool-item-dropdown" onclick="mergeVisible()">
+                        <i class="fas fa-compress"></i> Merge Visible
+                    </button>
+                    <button class="tool-item-dropdown" onclick="duplicateLayer()">
+                        <i class="fas fa-copy"></i> Duplicate Layer
+                    </button>
+                </div>
+            </div>
+
+            <!-- TEXT & SHAPES -->
+            <div class="toolbar-category">
+                <button class="category-button">
+                    <i class="fas fa-font"></i> TEXT & SHAPES
+                </button>
+                <div class="category-dropdown">
+                    <button class="tool-item-dropdown" onclick="addText()">
+                        <i class="fas fa-text-height"></i> Add Text
+                    </button>
+                    <button class="tool-item-dropdown" onclick="addRectangle()">
+                        <i class="fas fa-square"></i> Rectangle
+                    </button>
+                    <button class="tool-item-dropdown" onclick="addCircle()">
+                        <i class="fas fa-circle"></i> Circle
+                    </button>
+                    <button class="tool-item-dropdown" onclick="addLine()">
+                        <i class="fas fa-minus"></i> Line
+                    </button>
+                </div>
             </div>
         </div>
 
@@ -2592,6 +2805,88 @@
                 }
             }
         });
+
+        // Professional Toolbar Tool Functions
+        function resetImage() {
+            if (confirm('Reset image to original? All changes will be lost.')) {
+                if (originalImageData) {
+                    ctx.putImageData(originalImageData, 0, 0);
+                    currentImageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+                    resetAdjustmentSliders();
+                    saveToEditorHistory();
+                }
+            }
+        }
+
+        function selectAll() {
+            alert('Select All: Feature coming soon!');
+        }
+
+        function deselectAll() {
+            alert('Deselect All: Feature coming soon!');
+        }
+
+        function invertSelection() {
+            alert('Invert Selection: Feature coming soon!');
+        }
+
+        function resizeImage() {
+            const newWidth = prompt('Enter new width (px):', canvas.width);
+            const newHeight = prompt('Enter new height (px):', canvas.height);
+            if (newWidth && newHeight) {
+                const temp = document.createElement('canvas');
+                temp.width = parseInt(newWidth);
+                temp.height = parseInt(newHeight);
+                const tempCtx = temp.getContext('2d');
+                tempCtx.drawImage(canvas, 0, 0, parseInt(newWidth), parseInt(newHeight));
+                canvas.width = temp.width;
+                canvas.height = temp.height;
+                ctx.drawImage(temp, 0, 0);
+                currentImageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+                saveToEditorHistory();
+            }
+        }
+
+        function enableDrawing() {
+            alert('Drawing Tool: Feature coming soon!');
+        }
+
+        function enableBrush() {
+            alert('Paint Brush: Feature coming soon!');
+        }
+
+        function enableEraser() {
+            alert('Eraser Tool: Feature coming soon!');
+        }
+
+        function adjustOpacity() {
+            document.getElementById('propsToggle').click();
+            alert('Use the Opacity slider in the Adjustments panel');
+        }
+
+        function mergeVisible() {
+            alert('Merge Visible: Feature coming soon!');
+        }
+
+        function duplicateLayer() {
+            alert('Duplicate Layer: Feature coming soon!');
+        }
+
+        function addText() {
+            alert('Add Text: Feature coming soon!');
+        }
+
+        function addRectangle() {
+            alert('Add Rectangle: Feature coming soon!');
+        }
+
+        function addCircle() {
+            alert('Add Circle: Feature coming soon!');
+        }
+
+        function addLine() {
+            alert('Add Line: Feature coming soon!');
+        }
 
         // Toggle Mobile Panels (Collapsible)
         function toggleMobilePanel(panelType) {
