MAJOR FIXES: Dashboard real-time data updates + Fixed duplicate footers in edit-pdf & ppt-to-pdf
 Dashboard (dashboard.html):
- Added comprehensive real-time data loading system
- Auto-updates user profile (name, email, plan, conversions)
- Real-time payment history with beautiful status cards
- Auto-populates billing address from Firestore
- Loads user statistics and recent tool usage
- Enhanced payment cards with color-coded status badges
- Added error handling and empty states
- All data updates automatically on user login via Firebase

 edit-pdf.html:
- Removed duplicate footer from print window JavaScript code
- Fixed closing tags in d.write() string

 ppt-to-pdf.html:
- Removed duplicate footer from documentContent template string
- Cleaned up HTML generation code

 Dashboard Features:
- Profile Overview: Real-time name, email, conversions count
- Payment History: Beautiful cards with status indicators (green/red/yellow)
- Billing Address: Auto-fill from Firestore
- User Stats: Recent tools, conversion tracking
- Navigation: Hash-based routing with smooth scrolling
- Mobile responsive with proper error handling

All dashboard data now loads in real-time when user logs in!

--- a/edit-pdf.html
+++ b/edit-pdf.html
@@ -1193,28 +1193,7 @@
               + '<button id="bSave" class="btn" title="Save"><i class="fas fa-download"></i> Save</button>'
               + '</div>');
             d.write('<div class="page"><div id="text-layer"></div></div>');
-            d.write('
-
-
-
-<footer>
-        <div class="container footer-inner">
-            <div class="footer-company-links">
-                <span>Company</span>
-                <a href="index.html#about">About Us</a>
-                <a href="index.html#contact">Contact</a>
-                <a href="privacy-policy.html">Privacy Policy</a>
-                <a href="terms-of-service.html">Terms of Service</a>
-            </div>
-            <p class="footer-brand-line">&copy; easyjpgtopdf &mdash; Free PDF &amp; Image Tools for everyone.</p>
-            <p class="footer-credits">
-                Thanks to Font Awesome, Google Fonts, jsPDF, pdf.js, pdf-lib, Mammoth, Tesseract.js, IMG.LY, Firebase, Unsplash photographers, and every open-source contributor powering this site.
-                <a href="attributions.html">See full acknowledgements</a>.
-            </p>
-        </div>
-    </footer>
-    <script type="module" src="js/auth.js"></script>
-</body></html>');
+            d.write('</body></html>');
             d.close();
             function addScript(src){ return new Promise((res,rej)=&gt;{ const s=d.createElement('script'); s.src=src; s.onload=res; s.onerror=rej; d.body.appendChild(s); }); }
             (async ()=&gt;{
