--- a/ppt-to-pdf.html
+++ b/ppt-to-pdf.html
@@ -407,28 +407,7 @@
                     documentContent += `</div>`;
                     await new Promise(r => setTimeout(r, 200));
                 }
-                documentContent += `
-
-
-
-<footer>
-        <div class="container footer-inner">
-            <div class="footer-company-links">
-                <span>Company</span>
-                <a href="index.html#about">About Us</a>
-                <a href="index.html#contact">Contact</a>
-                <a href="privacy-policy.html">Privacy Policy</a>
-                <a href="terms-of-service.html">Terms of Service</a>
-            </div>
-            <p class="footer-brand-line">&copy; easyjpgtopdf &mdash; Free PDF &amp; Image Tools for everyone.</p>
-            <p class="footer-credits">
-                Thanks to Font Awesome, Google Fonts, jsPDF, pdf.js, pdf-lib, Mammoth, Tesseract.js, IMG.LY, Firebase, Unsplash photographers, and every open-source contributor powering this site.
-                <a href="attributions.html">See full acknowledgements</a>.
-            </p>
-        </div>
-    </footer>
-    <script type="module" src="js/auth.js"></script>
-</body></html>`;
+                documentContent += `</body></html>`;
                 updateProgress(95, 'Finalizing document...');
                 let downloadUrl, downloadName;
                 if (outputFormat === 'pdf') {
