Update: Add deployment marker comment to force Vercel rebuild

--- a/resume-maker.html
+++ b/resume-maker.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume Maker - Create Professional Resumes for Free</title>
+    <!-- Updated: Enhanced real-time preview system -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
